implement toogle function

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -97,6 +97,14 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
+.black {
+    background-color: black;
+}
+
+.white {
+    background-color: white;
+}
+
 @media (max-width: 800px){
 
    .header-container { 
