--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,8 +30,8 @@
       </div>
       <div class="toggle-container">
          <div class="toggle-logo">
-            <img *ngIf="!showImage" (click)="toggleImage()" src="assets/img/Vader.png">
-            <img *ngIf="showImage" (click)="toggleImage()"src="assets/img/strormtrooper.png">
+            <img *ngIf="!showImage"  [ngClass]="{'black' : showImage}" (click)="toggleImage()" src="assets/img/Vader.png">
+            <img *ngIf="showImage" [ngClass]="{'white' : showImage}" (click)="toggleImage()"src="assets/img/strormtrooper.png">
          </div>
       </div>
    
