css changes color, image changes and some styling

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 footer{
     
-        background-color: #00e3aa;
+        background-color: #ff6e48;
         color: #fff;
         text-align: center;
         font-weight: var(--font-semi);
