--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -6,7 +6,7 @@
         <span>Im a Software Developer and Scrum Master</span>
     </div>
     <div id="image" class="headline-image">    
-        <img src="assets/img/me.png">
+        <img src="assets/img/mePicture.png">
     </div>
     <div class="mobile-headline show-mobile"><h2>Hi, Im Max</h2></div>
 </section>
