--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -5,7 +5,7 @@
 }
 
 .about-container {
-    color: #00e3aa;
+    color: #ff6e48;
     text-align: center;
     font-size: 30px;
     padding-top: 40px;
