--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -16,13 +16,13 @@
 
     text-align: center;
     font-size: 45px;
-    color: #00e3aa;
+    color: #ff6e48;
 }
 
 .skill-image img{
 
-    height: 25px;
-    width: 25px;
+    height: 40px;
+    width: 40px;
 }
 
 .skills-name {
@@ -48,7 +48,6 @@
         position: relative;
         padding: .5rem 1rem;
         border-radius: .5rem;
-        box-shadow: 0px 4px 10px #00e3aa;
         margin: 20px;
 
 }
@@ -57,7 +56,6 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    background-color: #00e3aa;
     height: .25rem;
     border-radius: .5rem;
     width: 100%;
@@ -68,7 +66,6 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    background-color: #00e3aa;
     height: .25rem;
     border-radius: .5rem;
     width: 100%;
@@ -79,7 +76,6 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    background-color: #00e3aa;
     height: .25rem;
     border-radius: .5rem;
     width: 100%;
@@ -90,7 +86,6 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    background-color: #00e3aa;
     height: .25rem;
     border-radius: .5rem;
     width: 100%;
