change font family and some css changes

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -10,17 +10,14 @@
             <span>" I'm an enthusiastic software developer who wants to learn more "</span>
         </div>
     </div>
-        <!--<div class="textArea">
-            <div class="fade"></div>
-            <section class="star-wars">
-            <div class="crawl">
-                <div class="title">
-                <p>Episode IV</p>
-                <h1>A New Hope</h1>
-                </div>
-                    <p>It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire.</p>
-                    <p>During the battle, Rebel spies managed to steal secret plans to the Empire’s ultimate weapon, the DEATH STAR, an armored space station with enough power to destroy an entire planet.</p>
-                    <p>Pursued by the Empire’s sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy….</p>
+    <div class="textArea">
+        <div class="text1">
+            <h3>Work Experience</h3>
+            <span>I started my career as a software developer in November 2021 at Startup Werk. Since that time I have been developing web applications for and with our cooperation partners. Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</span>
         </div>
-    </section>-->
+        <div class="text2">
+            <h3>Why IT?</h3>
+            <span>I have always been fascinated by computers, videogames, IT and new technologies. I have started to question the logic behind systems. I not only wanted to understand how they work, but also I wanted to be able to create apps on my own.</span>
+        </div>
+    </div>
 </div>
