--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -3,7 +3,7 @@
 <section class="headline-container" id="home">
     <div class="headline-title-container">
         <h1>Hi I'm Max</h1> 
-        <span>Im a Software Developer and Scrum Master</span>
+        <span>Im a <span style="color: #ff6e48">Software developer</span> and <span style="color: #ff6e48;">Scrum Master</span></span>
     </div>
     <div id="image" class="headline-image">    
         <img src="assets/img/mePicture.png">
