install gsap and code animation for the site

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,17 +7,17 @@
             <img src="assets/img/meAtWork.png">
         </div>
         <div class="slogan">
-            <span>" I'm an enthusiastic software developer who wants to learn more "</span>
+            <p>" I'm an enthusiastic software developer who wants to learn more "</p>
         </div>
     </div>
     <div class="textArea">
         <div class="text1">
             <h3>Work Experience</h3>
-            <span>I started my career as a software developer in November 2021 at Startup Werk. Since that time I have been developing web applications for and with our cooperation partners. Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</span>
+            <p>I started my career as a software developer in November 2021 at Startup Werk. Since that time I have been developing web applications for and with our cooperation partners. Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</p>
         </div>
         <div class="text2">
             <h3>Why IT?</h3>
-            <span>I have always been fascinated by computers, videogames, IT and new technologies. I have started to question the logic behind systems. I not only wanted to understand how they work, but also I wanted to be able to create apps on my own.</span>
+            <p>I have always been fascinated by computers, videogames, IT and new technologies. I have started to question the logic behind systems. I not only wanted to understand how they work, but also I wanted to be able to create apps on my own.</p>
         </div>
     </div>
 </div>
