--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header [ngClass]="{'white' : showImage}">
+<header>
    <div class="header-container">
       <div class="logo-menu-container">
          <div class="header-logo">
