--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
-<!--===== WORK =====-->
-<section class="port-section" id="portfolio">
+
+<!--<section class="port-section" id="portfolio">
     <h2 class="port-title">Portfolio</h2>
 
     <div class="port-container">
@@ -35,4 +35,4 @@
 
 
     </div>
-</section>
+</section>-->
