change animations and implement video background

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,16 +1,16 @@
-<div class="about">
+<div class="about" id="aboutContainer">
         <div class="about-container" id="aboutme">
             <h2>About Me</h2>
         </div>
     <div class="aboutContainer">
-        <div class="images">
+        <div class="images" id="img">
             <img src="assets/img/meAtWork.png">
         </div>
-        <div class="slogan">
+        <div class="slogan" id="textArea">
             <p>" I'm an enthusiastic software developer who wants to learn more "</p>
         </div>
     </div>
-    <div class="textArea">
+    <div class="textArea" id="textBox">
         <div class="text1">
             <h3>Work Experience</h3>
             <p>I started my career as a software developer in November 2021 at Startup Werk. Since that time I have been developing web applications for and with our cooperation partners. Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</p>
@@ -21,3 +21,4 @@
         </div>
     </div>
 </div>
+
