--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,6 +1,10 @@
    <!--===== HOME =====-->
-   
 <section class="headline-container" id="home">
+    <!-- <div class="background-video">
+        <video playsinline autoplay muted loop id="myVideo">
+            <source src="assets/video/vecteezy_orange-circle-neon-frame-animation-on-black-background_15031356_997.mp4" type="video/mp4">
+          </video>    
+    </div> -->
     <div class="headline-title-container">
         <h1>Hi I'm Max</h1> 
         <span>I'm a <span style="color: #ff6e48">Software Developer</span> and <span style="color: #ff6e48;">Scrum Master</span></span>
