--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -36,6 +36,10 @@
     font-size: 20px;
 }
 
+.slogan p {
+    color: white;
+}
+
 .textArea {
     display: flex;
     justify-content: space-evenly;
