--- a/src/app/headline/headline.component.scss
+++ b/src/app/headline/headline.component.scss
@@ -1,3 +1,13 @@
+#myVideo {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -100;
+    height: 100px;
+}
+
 .headline-container{
     display: flex;
     justify-content: space-between;
@@ -73,31 +83,6 @@ p {
     color: white;
   
 }
- 
-@keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-moz-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-webkit-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-o-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-ms-keyframes fadeIn {
-    0% {opacity:0;}
-
-}  
 
 .show-mobile {
 
