--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
                <img src="assets/img/6593477_menu-png-white-menu-icon-svg-png-download-removebg-preview.png">
             </div>
          <div class="header-link menu hide-mobile">
-            <a href="/" style="color:#ff6e48 ;"><b>Home</b></a>
+            <a href="/" style="color:#fc0e49 ;"><b>Home</b></a>
             <a href="#aboutme"><b>About Me</b></a>
             <a href="#skills"><b>Skills</b></a>
             <a href="#portfolio"><b>Portfolio</b></a>
@@ -29,9 +29,8 @@
          </div>
       </div>
       <div class="toggle-container">
-         <div class="toggle-logo" id="toogle">
-            <img *ngIf="showImage"  (click)="toggleImage()" src="assets/img/Vader.png">
-            <img *ngIf="!showImage"  (click)="toggleImage()"src="assets/img/strormtrooper.png">
+         <div class="toggle-logo" id="">
+            <img (click)="this.darkMode.toggleDarkTheme()" src="assets/img/strormtrooper.png">
          </div>
       </div>
    
