--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,12 +7,12 @@
 
 .contact-clean form {
     max-width: 480px;
-    border: 1px solid #ff6e48;
+    border: 1px solid #fc0e49;
     width: 90%;
     margin: 0 auto;
     padding: 40px;
     border-radius: 4px;
-    color: #ff6e48;
+    color: #fc0e49;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     
 }
@@ -22,7 +22,7 @@
     font-weight: bold;
     font-size: 28px;
     margin-bottom: 36px;
-    color: #ff6e48;
+    color: #fc0e49;
     text-align: center;
 }
 
@@ -33,7 +33,7 @@
 .form-control{
 
     width: 465px;
-    border: 1px solid #ff6e48;
+    border: 1px solid #fc0e49;
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 10px;
     
@@ -52,7 +52,7 @@
 }
 
 .contact-clean form .form-control:focus {
-    border: 1px solid #ff6e48;
+    border: 1px solid #fc0e49;
 }
 
 .contact-clean form textarea.form-control {
@@ -65,7 +65,7 @@
 
 .contact-clean form .btn {
     padding: 16px 32px;
-    border: 1px solid #ff6e48;
+    border: 1px solid #fc0e49;
     background: none;
     box-shadow: none;
     text-shadow: none;
@@ -82,7 +82,7 @@
 
 .contact-clean form .btn:hover {
     opacity: 1;
-    background-color:#ff6e48;
+    background-color:#fc0e49;
     color: black;
     transition: 0.1s;
 }
@@ -94,7 +94,7 @@
 .contact-clean form .btn-primary {
     
     margin-top: 15px;
-    color:#ff6e48;
+    color:#fc0e49;
     cursor: pointer;
     
 }
