--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,21 @@
+body {
+    --text-color: #eee;
+    --bkg-color: #222;
+    --btn-txt-color: white;
+    --btn-bg-color: rgb(11, 88, 160);
+  }
+  body.dark-theme {
+    --text-color: #222;
+    --bkg-color: #eee;
+    --btn-txt-color: rgb(46, 43, 43);
+    --btn-bg-color: rgb(20, 211, 195);
+  }
+  
 
 body {
     margin: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--bkg-color);
+    color: black;
     font-family: 'Lato', sans-serif;
     font-family: 'Quicksand', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
@@ -10,4 +24,5 @@ body {
 html {
     scroll-behavior: smooth;
 }
+
 
