--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,13 +1,13 @@
    <!--===== HOME =====-->
 <section class="headline-container" id="home">
     <div class="headline-title-container">
-        <h1>Hi I'm Max</h1> 
-        <span>I'm a <span style="color: #fc0e49">Software Developer</span> and <span style="color: #fc0e49;">Scrum Master</span></span>
+        <h1>Hi I'm</h1> 
+        <span class="name">Max Kraemer</span>
     </div>
-    <div id="image" class="headline-image">    
+    <!-- <div id="image" class="headline-image">    
         <img src="assets/img/mePicture.png">
-    </div>
-    <div class="mobile-headline show-mobile"><h2>Hi, Im Max</h2></div>
+    </div> -->
+    <div class="mobile-headline show-mobile"><span>I'm a Software Developer and Scrum Master</span></div>
 </section>
 
 <div>
