--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,8 @@
 
-<!--<section class="port-section" id="portfolio">
-    <h2 class="port-title">Portfolio</h2>
+<section class="port-section" id="portfolio">
+    <h2 class="port-title">Featured projekts</h2>
 
-    <div class="port-container">
+    <!--<div class="port-container">
         <div class="port-img mg-32">
             <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html"target="_blank"><img src="assets/img/elpollo.png"></a>
         </div>
@@ -34,5 +34,5 @@
         </div>
 
 
-    </div>
+    </div>-->
 </section>-->
