change styling at about and skills

--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -7,9 +7,8 @@
     <!-- <div id="image" class="headline-image">    
         <img src="assets/img/mePicture.png">
     </div> -->
-    <div class="mobile-headline show-mobile"><span>I'm a Software Developer and Scrum Master</span></div>
 </section>
 
 <div>
-    <p>I write about building profitable web applications as a developer</p>
+    <p>I write about building profitable web applications as a developer and lead as a Scrum Master</p>
 </div>
