--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,23 +1,22 @@
 <div class="about" id="aboutContainer">
         <div class="about-container" id="aboutme">
-            <h2>About Me</h2>
+            <h2>< / Developer</h2>
         </div>
     <div class="aboutContainer">
         <div class="images" id="img">
             <img src="assets/img/meAtWork.png">
         </div>
         <div class="slogan" id="textArea">
-            <p>" I'm an enthusiastic software developer who wants to learn more "</p>
+            <p>" I'm an enthusiastic software developer and scrum master who wants to learn more "</p>
         </div>
     </div>
     <div class="textArea" id="textBox">
         <div class="text1">
-            <h3>Work Experience</h3>
-            <p>I started my career as a software developer in November 2021 at Startup Werk. Since that time I have been developing web applications for and with our cooperation partners. Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</p>
-        </div>
-        <div class="text2">
-            <h3>Why IT?</h3>
-            <p>I have always been fascinated by computers, videogames, IT and new technologies. I have started to question the logic behind systems. I not only wanted to understand how they work, but also I wanted to be able to create apps on my own.</p>
+            <p>Hello Im Max, I started my career as a software developer in November 2021 at Startup Werk. 
+                <br>
+                Since that time I have been developing web applications for and with our cooperation partners. 
+                <br>
+                Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</p>
         </div>
     </div>
 </div>
