--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,32 +1,21 @@
 .skillscontainer {
     display: flex;
     justify-content: center;
-    
 }
 
-.skills-section {
+span {
+    color: var(--text-color);
+}
 
-    font-size: 39px;
-    font-family: sans-serif;
-    background: linear-gradient(60deg, #9845E8 -1.72%, #33D2FF 20.05%, #DD5789 99.78%);
+.skills-section h2 {
+    text-align: center;
+    font-size: 45px;
+    background: linear-gradient(1deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-fill-color: transparent;
-    padding-top: 50px;
-    
-    
-}
-
-.skills-section h2 {
-
-    text-align: center;
-    font-size: 45px;
-    background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;  
+    font-family: sans-serif;
 }
 
 .skill-image img{
