change color and styling

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,7 @@
 
 .contact-clean form {
     max-width: 480px;
-    border: 1px solid #fc0e49;
+    border: 1px solid #ffffff;
     width: 90%;
     margin: 0 auto;
     padding: 40px;
@@ -41,7 +41,7 @@
 .form-control{
 
     width: 465px;
-    border: 1px solid #fc0e49;
+    border: 1px solid #ffffff;
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 10px;
     
@@ -60,7 +60,7 @@
 }
 
 .contact-clean form .form-control:focus {
-    border: 1px solid #fc0e49;
+    border: 1px solid #ffffff;
 }
 
 .contact-clean form textarea.form-control {
@@ -73,7 +73,7 @@
 
 .contact-clean form .btn {
     padding: 16px 32px;
-    border: 1px solid #fc0e49;
+    border: 1px solid #ffffff;
     background: none;
     box-shadow: none;
     text-shadow: none;
@@ -90,7 +90,7 @@
 
 .contact-clean form .btn:hover {
     opacity: 1;
-    background-color:#fc0e49;
+    background-color:#ffffff;
     color: black;
     transition: 0.1s;
 }
