--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 footer{
     
-        background-color: #c80efc;
+        background-color: #ffffff;
         color: #fff;
         text-align: center;
         font-weight: var(--font-semi);
