--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,11 @@
 footer{
-    
+
         background-color: #ffffff;
         color: #fff;
         text-align: center;
         font-weight: var(--font-semi);
         padding: 2rem 0;
-    
+
 }
 
 .footer-data{
@@ -14,19 +14,19 @@ footer{
 }
 
 .footer-data a{
-    
+
     padding-top: 30px;
     color: rgb(73, 73, 73);
     text-decoration: none;
     font-size: 18px;
     text-align: center;
-    
+
 }
 
 .footer-data a:hover {
 
     text-decoration: underline;
-    
+
 }
 
 
@@ -44,7 +44,7 @@ p {
 
 }
 
-span {
+p {
 
     color: rgb(73, 73, 73);
     text-align: center;
@@ -55,6 +55,6 @@ span {
 
 @media (max-width: 800px) {
 
-    
-  
+
+
 }
