--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,23 @@
+<!--header-->
 <header>
-   <div class="header-container">
-      <div class="logo-container">
-         <div class="logo">
-            <span>MK</span>
-        </div>
+  <div class="header-container">
+    <div class="logo-container">
+      <div class="logo">
+        <p>MK</p>
       </div>
-         <div class="header-link">
-            <a href="#aboutme"><b>About Me</b></a>
-            <a href="#skills"><b>Skills</b></a>
-            <a href="#portfolio"><b>Portfolio</b></a>
-            <a href="#contact"><b>Contact</b></a>
-      <div class="toggle-container">
-         <div class="toggle-logo" id="">
-            <img (click)="this.darkMode.toggleDarkTheme()" src="assets/img/strormtrooper.png">
-         </div>
+    </div>
+    <div class="header-link">
+      <a href="#aboutme"><b>About Me</b></a>
+      <a href="#skills"><b>Skills</b></a>
+      <a href="#portfolio"><b>Portfolio</b></a>
+      <a href="#contact"><b>Contact</b></a>
+    </div>
+    <div class="toggle-container">
+      <div class="toggle-logo">
+        <img (click)="this.darkMode.toggleDarkTheme()" src="assets/img/strormtrooper.png">
       </div>
-   </div>
-</div>
-
- </header>
-
+    </div>
+  </div>
+</header>
 
 
- <!--
-       <div id="menu" class="overlay-menu d-none" >
-          <div (click)="closeMenu()" class="close-menu"><button class="btn">close</button></div>
-         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#aboutme">ABOUT ME</a></li>
-       
-         </ul>
-
-       </div>-->
