--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,14 +1,9 @@
-   <!--===== HOME =====-->
 <section class="headline-container" id="home">
     <div class="headline-title-container">
-        <h1>Hi I'm</h1> 
-        <span class="name">Max Kraemer</span>
+        <h1>Hi I'm</h1>
+        <p class="name">Max Kraemer</p>
     </div>
-    <!-- <div id="image" class="headline-image">    
-        <img src="assets/img/mePicture.png">
-    </div> -->
 </section>
-
 <div>
-    <p>I write about building profitable web applications as a developer and lead as a Scrum Master</p>
+    <p>I write about building profitable web applications as a developer and lead as a future Scrum Master</p>
 </div>
