--- a/src/app/headline/headline.component.scss
+++ b/src/app/headline/headline.component.scss
@@ -9,7 +9,7 @@
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;    
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 h1 {
@@ -28,10 +28,10 @@ h1 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  text-fill-color: transparent    
+  text-fill-color: transparent
 }
 
-span {
+p {
   color: var(--text-color);
   font-size: 22px;
 }
@@ -64,12 +64,12 @@ p {
 @media (max-width: 800px) {
 
   .headline-container{
-  
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-  
+
   }
 
   .hide-mobile {
@@ -87,7 +87,7 @@ p {
 
     display: flex;
     justify-content: center;
-    
+
   }
 
   .mobile-headline {
@@ -98,10 +98,10 @@ p {
     text-align: center;
   }
 
-  
-  
-  
-  
+
+
+
+
 }
 
 
