--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,50 +1,50 @@
 <!--===== SKILLS =====-->
 <section class="skills-section" id="skills">
     <h2 class="section-title">Skills</h2>
-    <div class="skillscontainer">          
+    <div class="skillscontainer">
         <div class="container1">
             <p class="skills-text"></p>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/java script.png"></div>
-                    <span class="skills-name">HTML5</span>
+                    <p class="skills-name">HTML5</p>
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/css.png"></div>
-                    <span class="skills-name">CSS3</span>
+                    <p class="skills-name">CSS3</p>
                 </div>
                 <div class="skills-bar skills-css"></div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/js.png"></div>
-                    <span class="skills-name">JAVASCRIPT</span>
+                    <p class="skills-name">JAVASCRIPT</p>
                 </div>
                 <div class="skills-bar skills-js">
-                    
+
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/angular.png"></div>
-                    <span class="skills-name">Angular</span>
+                    <p class="skills-name">Angular</p>
                 </div>
                 <div class="skills-bar skills-angular">
-                    
+
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
         </div>
@@ -54,47 +54,47 @@
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/Git-Icon-1788C 2.png"></div>
-                    <span class="skills-name">GIT</span>
+                    <p class="skills-name">GIT</p>
                     <div class="skills-bar skills-html"></div>
-                
+
 
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/icons8-rest-api-80 2.png"></div>
-                    <span class="skills-name">Rest API</span>
+                    <p class="skills-name">Rest API</p>
                 </div>
                 <div class="skills-bar skills-css"></div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/Group 226.png"></div>
-                    <span class="skills-name">SCRUM</span>
+                    <p class="skills-name">SCRUM</p>
                 </div>
                 <div class="skills-bar skills-js">
-                    
+
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
             <div class="skills-data">
                 <div class="skills-names">
                     <div class="skill-image"><img src="assets/img/database-5-64.png"></div>
-                    <span class="skills-name">Database</span>
+                    <p class="skills-name">Database</p>
                 </div>
                 <div class="skills-bar skills-angular">
-                    
+
                 </div>
                 <div>
-                    <span class="skills-percentage"></span>
+                    <p class="skills-percentage"></p>
                 </div>
             </div>
         </div>
