--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -35,7 +35,7 @@ h2 {
     align-items: center;
 }
 
-.slogan span{
+.slogan p{
     font-size: 20px;
 }
 
@@ -44,7 +44,7 @@ p {
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;    
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .textArea {
@@ -65,11 +65,11 @@ p {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent; 
+    text-fill-color: transparent;
     font-size: 30px;
 }
 
-.textArea span {
+.textArea p {
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -91,7 +91,7 @@ p {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        
+
     }
 
     .textArea {
@@ -100,14 +100,14 @@ p {
         justify-content: center;
         flex-direction: column;
     }
-    
+
     .text1 {
 
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        
+
     }
 
     .slogan {
