--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,199 +1,193 @@
 header {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
 
-.logo {
+  .logo {
     justify-content: flex-start;
     font-size: 53px;
     background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent  
-}
+    text-fill-color: transparent;
+  }
 
-.header-social img{
+  .header-social img {
     height: 25px;
     width: 25px;
+  }
 }
 
 a {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
-.header-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 100px;
-    padding-right: 150px;
-    height: 100px;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 100px;
+  padding-right: 150px;
+  height: 100px;
+  font-family: 'Lato', sans-serif, 'Poppins', 'Quicksand', 'Roboto Condensed';
 }
 
 .logo-menu-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-right: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 50px;
 }
 
-.header-link{
-    display: flex;
-}
-
-.header-link img{
+.header-link {
+  display: flex;
+  img {
     height: 25px;
     width: 25px;
-
+  }
 }
 
-.header-container a{
+.header-container a {
+  color: var(--text-color);
+  margin-left: 50px;
+  text-decoration: none;
+  &:hover {
     color: var(--text-color);
-    margin-left: 50px;
-    text-decoration: none;
-}
-
-.header-container a:hover{
-    color: #fc0e49;
     text-decoration: underline;
+  }
 }
 
-.header-logo img{
-    height: 60px;
-    width: 65px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    cursor: pointer;
+.header-logo img {
+  height: 60px;
+  width: 65px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  cursor: pointer;
 }
-
 
 .burger-menu {
-    position: absolute;
-    right: 15px;
-    top: 30px;
-    cursor: pointer;
+  position: absolute;
+  right: 15px;
+  top: 30px;
+  cursor: pointer;
 }
 
 .showOverlayMenu {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
-.menu ul li a {
-    color: #ff6e48;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-    color: #ff6e48;
+.menu {
+  ul {
+    li a {
+      color: #ff6e48;
+      &:hover {
+        text-decoration: underline;
+        color: #ff6e48;
+      }
+    }
+  }
 }
 
 .d-none {
-    display: none;
+  display: none;
 }
 
-.toggle-logo img {
+.toggle-logo {
+  img {
     height: 40px;
     width: 40px;
     cursor: pointer;
     margin-left: 40px;
+  }
 }
 
+// Themes
 .black {
-    background-color: black;
+  background-color: black;
+  color: white;
 }
 
 .white {
-    background-color: white;
-    b {
-        color: black;
-    }
+  background-color: white;
+  color: black;
+  b {
+    color: black;
+  }
 }
 
-@media (max-width: 800px){
+// Media Query for Mobile Devices
+@media (max-width: 800px) {
+  .header-container {
+    padding: 0;
+  }
 
-   .header-container { 
+  .hide-mobile {
+    display: none;
+  }
+
+  .menu-responsive {
+    display: contents;
+    cursor: pointer;
+
+    img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding-top: 20px;
+      padding-right: 35px;
+      width: 40px;
+    }
+  }
+
+  .overlay-menu {
+    height: 220px;
+    width: 200px;
+    background-color: #ff6e48;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  .nav-list {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 0px;
-    padding-right: 0px;
-   }
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 50px;
 
-   .hide-mobile {
-        display: none;
+    a {
+      font-size: 20px;
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 20px;
     }
+  }
 
-    .menu-responsive {
-        display: contents;
-        cursor: pointer;
+  button {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 
-        img {
-            position: absolute;
-            top: 0;
-            right: 0;
-            padding-top: 20px;
-            padding-right: 35px;
-            width: 40px;
-        }
-    }
+  .btn {
+    background-color: #ff6e48;
+    border: none;
+    color: #ff6e48;
+    font-size: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    cursor: pointer;
+  }
 
-    .overlay-menu {
-        height: 220px;
-        width: 200px;
-        background-color: #ff6e48;
-        border-radius: 5px;
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .nav-list {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-top: 50px;
-        a {
-
-            font-size: 20px;
-            display: flex;
-            justify-content: flex-end;
-            padding-right: 20px;
-        }
-    }
-
-    button {
-        position: absolute;
-        top: 0;
-        right: 0;
-
-    }
-    .btn{
-        background-color: #ff6e48;
-        border: none;
-        color: #ff6e48;
-        font-size: 20px;
-        padding-right: 20px;
-        padding-top: 10px;
-        cursor: pointer;
-
-    }
-    .header-container a:hover {
-        color: #ff6e48;
-        text-decoration: underline;
-    }
-
+  .header-container a:hover {
+    color: #ff6e48;
+    text-decoration: underline;
+  }
 }
-    
