--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -7,7 +7,7 @@
     padding-top: 150px;
 }
 
-span {
+p {
     color: var(--text-color);
 }
 
@@ -72,7 +72,7 @@ span {
     height: .25rem;
     border-radius: .5rem;
     width: 100%;
-    
+
 }
 
 .skills-angular{
@@ -97,7 +97,7 @@ span {
 }
 
 @media (max-width: 800px) {
-    
+
     .skills-section {
 
         display: flex;
