--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,18 @@
 body {
-    --text-color: #eee;
-    --bkg-color: #000000;
-    --btn-txt-color: white;
-    --btn-bg-color: rgb(11, 88, 160);
-  }
-  body.dark-theme {
-    --text-color: #000000;
-    --bkg-color: #eee;
-    --btn-txt-color: rgb(46, 43, 43);
-    --btn-bg-color: rgb(20, 211, 195);
-  }
-  
-
-body {
-    margin: 0;
-    background-color: var(--bkg-color);
-    color: black;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
+  background-color: #000;
+  color: #fff;
 }
 
-html {
-    scroll-behavior: smooth;
+p {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
-
+a {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+}
 
